Fixed button overlap so not clickable

--- a/src/app/core/reg-plate-main/reg-plate-main.component.scss
+++ b/src/app/core/reg-plate-main/reg-plate-main.component.scss
@@ -25,7 +25,6 @@
   align-items: center;
   gap: 1rem;
   max-width: 250px;
-  max-height: 250px;
   margin: 0 auto;
 
   .badge-selector {
