--- a/src/app/core/reg-plate-valuation-results/reg-plate-valuation-results.component.scss
+++ b/src/app/core/reg-plate-valuation-results/reg-plate-valuation-results.component.scss
@@ -112,5 +112,3 @@ $bevel-color: hsla(  0,  0%, 100%, 1);
   background-color: aquamarine;
 }
 
-/* Center */
-html,body{height:100%;}html{display:table;width:100%;}body{display:table-cell;vertical-align:middle;text-align:center;overflow: hidden;}
